<resources>
    <string name="app_name">WRLD Android API Samples</string>
    <string name="app_short_name">WRLD Samples</string>
    <string name="eegeo_api_key">obtain an api key by signing up at wrld3d.com and insert here</string>
    <string name="basic_example_label">Embed a 3D map</string>
    <string name="basic_example_description">How to embed a 3D map view in an Android App</string>
    <string name="position_view_on_map_example_label">Position a View on the map</string>
    <string name="position_view_on_map_example_description">Use a positioner to locate a View at a point on the map</string>
    <string name="position_code_created_view_on_map_example_label">Position a code-created View on the map</string>
    <string name="position_code_created_view_on_map_example_description">Position a code-created View on the map and use a positioner to locate it</string>
    <string name="move_camera_example_label">Move the camera</string>
    <string name="move_camera_example_description">Simple camera movement</string>
    <string name="animate_camera_example_label">Animate the camera</string>
    <string name="animate_camera_example_description">Move the camera with animation</string>
    <string name="move_camera_to_indoor_example_label">Move the camera to an indoor map</string>
    <string name="move_camera_to_indoor_example_description">Move the map camera to a point on an indoor map.</string>
    <string name="animate_camera_to_indoor_example_label">Animate the camera to an indoor map</string>
    <string name="animate_camera_to_indoor_example_description">Move the map camera with animation to a point on an indoor map.</string>
    <string name="framing_camera_example_label">Frame an area</string>
    <string name="framing_camera_example_description">Move the camera to frame an area</string>
    <string name="query_camera_example_label">Query camera location and zoom</string>
    <string name="query_camera_example_description">Obtain the current camera location and zoom level</string>
    <string name="picking_camera_example_label">Pick a point on the map</string>
    <string name="picking_camera_example_description">Obtain the coordinates of a point on the map that is tapped by the user</string>
    <string name="exit_indoor_example_label">Enter and exit an indoor map</string>
    <string name="exit_indoor_example_description">Entering and exiting an indoor map</string>
    <string name="name_indoor_example_label">Query the name of an indoor map</string>
    <string name="name_indoor_example_description">After entering an indoor map, display its name</string>
    <string name="move_floor_indoor_example_label">Control indoor map floors</string>
    <string name="move_floor_indoor_example_description">Move between indoor map floors</string>
    <string name="ux_floor_indoor_example_label">Animate indoor maps with a slider</string>
    <string name="ux_floor_indoor_example_description">Optional, beautiful user experience for controlling indoor maps</string>
    <string name="add_marker_example_label">Add a marker</string>
    <string name="add_marker_example_description">Display a marker on the map</string>
    <string name="marker_custom_icon_example_label">Add a marker with a different icon</string>
    <string name="marker_custom_icon_example_description">Display a marker on the map with a specific icon</string>
    <string name="marker_with_elevation_example_label">Add a marker with an elevation</string>
    <string name="marker_with_elevation_example_description">Display a marker on the map at a height above the ground</string>
    <string name="marker_with_absolute_altitude_example_label">Add a marker with an altitude</string>
    <string name="marker_with_absolute_altitude_example_description">Display a marker on the map at a height above sea level</string>
    <string name="add_indoor_marker_example_label">Add an indoor marker</string>
    <string name="add_indoor_marker_example_description">Display a marker on an indoor map</string>
    <string name="marker_change_text_example_label">Change the title of a marker</string>
    <string name="marker_change_text_example_label_description">Alter the text on a marker after adding to the map</string>
    <string name="marker_change_location_example_label">Change the location of a marker</string>
    <string name="marker_change_location_example_description">Alter the location of a marker after adding to the map</string>
    <string name="marker_tapped_notification_example_label">Select a marker</string>
    <string name="marker_tapped_notification_example_description">Get notified when the user taps on a marker</string>
    <string name="marker_change_draw_order_example_label">Change the draw order of markers</string>
    <string name="marker_change_draw_order_example_description">Configure and alter the draw order of markers. Draw order determines precedence when markers overlap</string>
    <string name="streaming_complete_notification_example_label">Map streaming completed notification</string>
    <string name="streaming_complete_notification_example_description">Receive notification that the loading of map resources for the initial scene has completed</string>
    <string name="map_options_example_label">Create a map view programmatically</string>
    <string name="map_options_example_description">Add a 3d map view configured with options in a dynamically created layout</string>
    <string name="add_polygon_example_label">Add a polygon</string>
    <string name="add_polygon_example_description">Display a polygon on the map</string>
    <string name="add_polygon_indoors_example_label">Add a polygon to an indoor map</string>
    <string name="add_polygon_indoors_example_description">Display a polygon inside an indoor map</string>
    <string name="add_polygon_with_holes_example_label">Add a polygon with holes</string>
    <string name="add_polygon_with_holes_example_description">Display a polygon with holes on the map</string>
    <string name="add_polygon_with_elevation_example_label">Add a polygon with elevation</string>
    <string name="add_polygon_with_elevation_example_description">Display a polygon on the map at a height above the ground</string>
    <string name="add_polyline_example_label">Add a polyline</string>
    <string name="add_polyline_example_description">Display a polyline on the map</string>
    <string name="add_polyline_indoors_example_label">Add a polyline to an indoor map</string>
    <string name="add_polyline_indoors_example_description">Display a polyline inside an indoor map</string>
    <string name="add_heatmap_example_label">Add a heatmap</string>
    <string name="add_heatmap_example_description">Display a heatmap on the map</string>
    <string name="add_heatmap_indoors_example_label">Add a heatmap to an indoor map</string>
    <string name="add_heatmap_indoors_example_description">Display a heatmap inside an indoor map</string>
    <string name="interact_with_heatmap_example_label">Add and interact with a heatmap</string>
    <string name="interact_with_heatmap_example_description">Display a heatmap on the map, with interactive controls</string>
    <string name="add_prop_indoors_example_label">Add a prop to an indoor map</string>
    <string name="add_prop_indoors_example_description">Display a prop inside an indoor map</string>
    <string name="bluesphere_accuracy_ring_example_label">Blue sphere with accuracy ring</string>
    <string name="bluesphere_accuracy_ring_example_description">Show an accuracy ring around blue sphere</string>
    <string name="bluesphere_change_location_example_label">Change the location of a blue sphere</string>
    <string name="bluesphere_change_location_example_description">Move the blue sphere to a different point on the map</string>
    <string name="bluesphere_change_bearing_example_label">Change the bearing of a blue sphere</string>
    <string name="bluesphere_change_bearing_example_description">Alter the bearing the blue sphere is facing</string>
    <string name="bluesphere_change_elevation_example_label">Change the elevation of a blue sphere</string>
    <string name="bluesphere_change_elevation_example_description">Display a blue sphere on the map at a height above the ground</string>
    <string name="bluesphere_indoors_example_label">Move the blue sphere indoors</string>
    <string name="bluesphere_indoors_example_description">Display a blue sphere inside an indoor map</string>
    <string name="add_building_highlight_example_label">Add a building highlight</string>
    <string name="add_building_highlight_example_description">Add a highlight for a building</string>
    <string name="remove_building_highlight_example_label">Remove a building highlight</string>
    <string name="remove_building_highlight_example_description">Remove a building highlight that was previously added to the map</string>
    <string name="place_objects_on_buildings_example_label">Place objects on buildings</string>
    <string name="place_objects_on_buildings_example_description">Query the altitude of a building in order to position a marker</string>
    <string name="picking_buildings_example_label">Picking buildings</string>
    <string name="picking_buildings_example_description">Highlight buildings by tapping on them</string>
    <string name="query_building_information_example_label">Query building information</string>
    <string name="query_building_information_example_description">Obtain information about a building at a location and place a marker above its centroid</string>
    <string name="set_labels_enabled_example_label">Enable and disable labels</string>
    <string name="set_labels_enabled_example_description">Enable and disable labels</string>
    <string name="search_example_label">Search for POIs</string>
    <string name="search_example_description">Use the POI service to find POIs on the map matching a certain query</string>
    <string name="cancel_search_label">Cancel a POI search</string>
    <string name="cancel_search_description">Cancel an ongoing search before it completes</string>
    <string name="load_mapscene_label">"Load a Mapscene"</string>
    <string name="load_mapscene_description">"Use the Mapscene service to load and apply a mapscene"</string>
    <string name="route_example_label">Find an outdoor route</string>
    <string name="route_example_description">Use the routing service to find a route between two places outdoors</string>
    <string name="indoor_route_example_label">Find an indoor route</string>
    <string name="indoor_route_example_description">Use the routing service to find a route inside a building</string>
    <string name="multipart_route_example_label">Find a multipart route</string>
    <string name="multipart_route_example_description">Use the routing service to find a route from inside one building to another</string>
    <string name="cancel_route_query_label">Cancel a routing query</string>
    <string name="heatmap_theme_manifest">http://cdn-resources.wrld3d.com/mobile-themes-new/v1451/ambientdark/manifest.bin.gz</string>
    <string name="exit_button_label">Exit</string>
    <string name="moveup_button_label">Move Up</string>
    <string name="movedown_button_label">Move Down</string>
    <string name="topfloor_button_label">Top Floor</string>
    <string name="bottomfloor_button_label">Bottom Floor</string>
    <string name="add_indoor_map_entity_information">Add Entity Information</string>
    <string name="remove_indoor_map_entity_information">Remove Entity Information</string>
    <string name="default_start_lat">37.7858</string>
    <string name="default_start_lon">-122.401</string>
    <string name="default_start_zoom">16</string>
    <string name="indoor_start_lat">37.781871</string>
    <string name="indoor_start_lon">-122.404812</string>
    <string name="polyline_start_lat">37.7900</string>
    <string name="polyline_start_lon">-122.401</string>
</resources>