<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:eegeo="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.eegeo.apisamples.MoveIndoorExampleActivity">

    <com.eegeo.mapapi.MapView
        android:id="@+id/move_floor_indoor_mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        eegeo:camera_target_latitude="@string/indoor_start_lat"
        eegeo:camera_target_longitude="@string/indoor_start_lon"
        eegeo:camera_zoom="@string/default_start_zoom"/>

    <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

        <Button
            android:id="@+id/topfloor_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onTopFloor"
            android:text="@string/topfloor_button_label"/>

        <Button
            android:id="@+id/moveup_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topfloor_indoor_button"
            android:enabled="false"
            android:onClick="onMoveUp"
            android:text="@string/moveup_button_label"/>

        <Button
            android:id="@+id/movedown_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/moveup_indoor_button"
            android:enabled="false"
            android:onClick="onMoveDown"
            android:text="@string/movedown_button_label"/>

        <Button
            android:id="@+id/bottomfloor_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movedown_indoor_button"
            android:enabled="false"
            android:onClick="onBottomFloor"
            android:text="@string/bottomfloor_button_label"/>

        <Button
            android:id="@+id/move_floor_exit_indoor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bottomfloor_indoor_button"
            android:enabled="false"
            android:onClick="onExit"
            android:text="@string/exit_button_label"/>
    </RelativeLayout>

</RelativeLayout>