<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:eegeo="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.eegeo.apisamples.AnimateCameraActivity">

    <com.eegeo.mapapi.MapView
        android:id="@+id/animate_camera_mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        eegeo:camera_target_latitude="@string/default_start_lat"
        eegeo:camera_target_longitude="@string/default_start_lon"
        eegeo:camera_zoom="@string/default_start_zoom"/>
</RelativeLayout>